--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "leaflet-measure",
   "version": "3.1.0",
   "description": "Coordinate, linear, and area measure tool for Leaflet maps",
-  "main": "dist/leaflet-measure.js",
+  "main": "dist/leaflet-measure.hu.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/ljagis/leaflet-measure.git"
+    "url": "git://github.com/etrock/leaflet-measure.git"
   },
   "keywords": [
     "leaflet",
